Retry index/layout styling - missing background

--- a/views/index.html
+++ b/views/index.html
@@ -18,8 +18,7 @@
         /* Google fonts */
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-        body,
-        html {
+        body {
             font-family: Roboto, sans-serif;
             margin: 0;
             display: flex;
@@ -32,6 +31,7 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            margin-bottom: 400px;
         }
 
         header {
