--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
     <title>Space Quiz </title>
     <style>
+        body {
+            font-family: Roboto, sans-serif;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: auto;
+            height: 100%;
+            background-color: black;
+            background-image: url(/assets/images/background_resized.gif);
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-bottom: 400px;
+        }
 
         /**
         * Default styles for xterm.js
