Retry index/layout styling - missing background

--- a/views/index.html
+++ b/views/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Space Quiz">
+    <!-- <meta name="description" content="Space Quiz">
     <meta name="keywords" content="quiz, space, cosmos, sagan">
     <meta name="author" content="Bojan Bakaric">
 
     <title>Space Quiz</title>
     <link rel="icon" href="../assets/images/icons8-galaxy-64.png">
-    <script src="https://kit.fontawesome.com/4fe3adf97b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4fe3adf97b.js" crossorigin="anonymous"></script> -->
 
-    <style>
-        /* Google fonts */
+    <!-- <style>
+        Google fonts
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
         body {
@@ -91,7 +91,7 @@
         p {
             margin: 0 5px;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
