--- a/views/layout.html
+++ b/views/layout.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Space Quiz">
+    <meta name="keywords" content="quiz, space, cosmos, sagan">
+    <meta name="author" content="Bojan Bakaric">
+
+    <title>Space Quiz</title>
+    <link rel="icon" href="../assets/images/icons8-galaxy-64.png">
+    <script src="https://kit.fontawesome.com/4fe3adf97b.js" crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    <title>Space Quiz </title>
+    
     <style>
+        /* Google fonts */
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
         body {
             font-family: Roboto, sans-serif;
             margin: 0;
@@ -24,6 +36,64 @@
             background-repeat: no-repeat;
             background-size: cover;
             margin-bottom: 400px;
+        }
+
+        header {
+            font-size: xx-large;
+        }
+
+        button {
+            width: 200px;
+            height: 40px;
+            background-color: #345eeb;
+            border: 1px solid grey;
+            color: white;
+            text-transform: uppercase;
+            margin: 10px;
+            border-radius: 8px;
+        }
+
+        button:hover {
+            background-color: #91a8f2;
+            color: #345eeb;
+            font-weight: 700;
+            border: 1px solid white;
+        }
+
+        header {
+            color: #345eeb;
+            margin: 10px;
+        }
+
+        footer {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            margin: 100px 570px;
+        }
+
+        a {
+            font-size: 250%;
+            color: #345eeb;
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+
+        a:hover {
+            color: #91a8f2;
+        }
+
+        .copyright {
+            color: #91a8f2;
+            font-size: 120%;
+            margin: 0 150px;
+            text-align: center;
+            white-space: nowrap;
+        }
+
+        .cppyright,
+        p {
+            margin: 0 5px;
         }
 
         /**
@@ -167,7 +237,7 @@
             text-decoration: underline;
         }
 
-        button {
+        /* button {
             width: 200px;
             height: 40px;
             background-color: #E84610;
@@ -176,7 +246,7 @@
             text-transform: uppercase;
             margin: 10px;
             border-radius: 8px;
-        }
+        } */
     </style>
 </head>
 
