Retry index/layout styling - missing background

--- a/views/index.html
+++ b/views/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
-    <!-- <meta name="description" content="Space Quiz">
+    <meta name="description" content="Space Quiz">
     <meta name="keywords" content="quiz, space, cosmos, sagan">
     <meta name="author" content="Bojan Bakaric">
 
     <title>Space Quiz</title>
     <link rel="icon" href="../assets/images/icons8-galaxy-64.png">
-    <script src="https://kit.fontawesome.com/4fe3adf97b.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/4fe3adf97b.js" crossorigin="anonymous"></script>
 
     <!-- <style>
         Google fonts
