--- a/views/layout.html
+++ b/views/layout.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="quiz, space, cosmos, sagan">
     <meta name="author" content="Bojan Bakaric">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
+
     <title>Space Quiz</title>
     <link rel="icon" href="../assets/images/icons8-galaxy-64.png">
     <script src="https://kit.fontawesome.com/4fe3adf97b.js" crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    
     <style>
         /* Google fonts */
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -31,11 +31,12 @@
             width: auto;
             height: 100%;
             background-color: black;
-            background-image: url(/assets/images/background_resized.gif);
+            background-image: url(../assets/images/background_resized.gif);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
             margin-bottom: 400px;
+            z-index: -1;
         }
 
         header {
