Retry index/layout styling - missing background

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Bojan Bakaric">
 
     <title>Space Quiz</title>
-    <link rel="icon" href="../assets/images/icons8-galaxy-64.png">
+    <link rel="icon" href="https://i.imgur.com/yveuh1s.png">
     <script src="https://kit.fontawesome.com/4fe3adf97b.js" crossorigin="anonymous"></script>
 
     <!-- <style>
