--- a/views/layout.html
+++ b/views/layout.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
 
     <title>Space Quiz</title>
-    <link rel="icon" href="../assets/images/icons8-galaxy-64.png">
+    <link rel="icon" href="https://i.imgur.com/yveuh1s.png">
     <script src="https://kit.fontawesome.com/4fe3adf97b.js" crossorigin="anonymous"></script>
 
     <style>
@@ -31,12 +31,11 @@
             width: auto;
             height: 100%;
             background-color: black;
-            background-image: url(../assets/images/background_resized.gif);
+            background-image: url("https://i.imgur.com/PODqjqt.gif");
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
             margin-bottom: 400px;
-            z-index: -1;
         }
 
         header {
