--- a/views/layout.html
+++ b/views/layout.html
@@ -50,6 +50,7 @@
             text-transform: uppercase;
             margin: 10px;
             border-radius: 8px;
+            cursor: pointer;
         }
 
         button:hover {
